<?xml version="1.0"?>
<package format="2">
  <name>ros_socket_gqcan_driver</name>
  <version>0.0.0</version>
  <description>The ros_socket_gqcan_driver package</description>

  <maintainer email="tatsuyai713@gmail.com">Tatsuya Ishikawa</maintainer>
  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
