<package>

  <name>can_msgs</name>
  <version>1.0.0</version>
  <description>
    ROS message definitions for GQ car control.
  </description>
  <maintainer email="fmt@fmt.cn">cui</maintainer>
  <author>C</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
